hosting strapdown locally

--- a/instructions.html
+++ b/instructions.html
@@ -61,7 +61,6 @@ $('#content').load('./README.md');
 </script>
 -->
 
-
-<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="./js/strapdown/strapdown.js"></script>
 
 </html>
