--- a/reports/trimester2report.html
+++ b/reports/trimester2report.html
@@ -315,6 +315,7 @@ for (var i = 1; i < schedule.length; i++) {
         });
         document.getElementById("tr2_outWindow_neverStarted").style.display = "block";
     }
+    console.log(senario5);
     </script>
 </div>
 
