--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <h1>MADRES Participants Tracking</h1>
-<a href="./instructions.html">Some notes and instructions about the tracking list</a>
+<a target="_blank" href="https://github.com/wangjingke/madresSubjectTracking/wiki">Some notes and instructions about the tracking list</a>
 <p id="today"></p>
 <p>Please input the reference date you would like to use to generate the reports (the default is today's date)</p>
 <input type="text" id="refDate" data-format="YYYY-MM-DD" data-template="YYYY MMM D" name="date"/>
