--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 <h1>MADRES Participants Tracking</h1>
 <p id="today"></p>
+<p><a target="_blank" href="https://madrescenter.blogspot.com/">Introduction to the MADRES study</a></p>
 <p><a target="_blank" href="./calculator.html">Madres Pregnancy Trimester Window Calculator</a></p>
 <p><a target="_blank" href="https://github.com/wangjingke/madresSubjectTracking/wiki">Some notes and instructions about the tracking list</a></p>
 <p>Please input the reference date you would like to use to generate the reports (the default is today's date)</p>
